# idia-server

./: .env.example  .gitignore  AGENTS.md  Dockerfile.ray  README.md  cluster.yaml  config.yaml  docker-compose.yml  idia  prometheus.yml  pyproject.toml  serve_config.yaml
docs/: ADR.md  ARCHITECTURE.md  DEPLOY.md
docs/audit_logs/: 2026-06-28_audit_structural_vettato.md  2026-06-28_audit_vettato.md
grafana/dashboards/: .gitkeep  dashboard.yml  vllm-dashboard.json
scripts/: cache_models.sh  create_security_groups.sh  create_user.sh  deploy_cluster.sh  render_config.py  smoke_test.sh
tests/: __init__.py  conftest.py  test_aws_floci.py  test_aws_scripts.py  test_config_schemas.py  test_contract.py  test_deploy_dry_run.py  test_docs.py  test_integration.py  test_security.py
