[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "idia-server"
description = "Self-hosted LLM inference server with automatic GPU elasticity and on-demand model loading"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyyaml>=6.0,<7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "testcontainers-floci>=0.1.0",
    "boto3>=1.35,<2",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "docs: documentation structure and consistency tests",
    "config: configuration file schema validation tests",
    "integration: tests that require Docker/Compose (skip by default)",
    "security: tests that verify security constraints",
    "aws: AWS integration tests via Floci (requires Docker)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
